@@ -3,7 +3,7 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-- status bar rect display
+- add option for confirm.save-all
 - redo/undo dirty restore is broken.
 - consistent formatting for mode files
 - gutter options: add option to completely hide gutter
@@ -14,9 +14,7 @@ and quirks that I need to fix eventually.
 - complete word: ditto
 - goToBuffer(): need to focus edit pane in question
 - switching between soft wrap and not needs to update anchors, etc
-- disable bracket match: gutter highlight not hidden
 - display:
-  - scrollTo() with 0 visibleLines
   - last physical line cleanup
   - text area: better scroll to
   - synchro scroll needs a rewrite & folding
@@ -34,9 +32,6 @@ and quirks that I need to fix eventually.
 - canonPath: get rid of ..
 - update horizontal scroll width immediately on buffer switch
 - enter with browser view focused; hides dialog
-- options for confirmation of:
-  save all
-  close all (w/ no unsaved changes)
 - need distinct default styles for new token types
 - HTML mode: use new token types
 - hypersearch: open in new split
